# Archon.AI

./: .archon.md  .env.example  .gitignore  ARCHON.txt  Dockerfile  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PROJECT_STATUS.md  README.md  archon  archon-artifacts-policy.json  archon-task-def.json  design.md  install.sh  pyproject.toml  refactor_agents.py  requirements.md  requirements.txt  setup_and_verify.sh  sim_test.py  verify_feature.py  verify_patch.py  verify_phase1.py  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_retriever.py
.agent/skills/: azure-diagrams  bicep-diagrams  terraform-diagrams
archon-server/: archon.db  requirements.txt
archon-server/app/: main.py
archon-server/app/auth/: jwt.py
archon-server/app/database/: db.py  models.py
archon-server/app/routes/: auth.py  chat.py  models.py
archon-server/app/services/: openrouter_client.py  usage_tracker.py
docs/: ANALYSIS_AND_SUGGESTIONS.md  ARCHITECTURE.md  FOLDER_STRUCTURE.md  IMPLEMENTATION.md
examples/saas_with_auth/: EXECUTION_TRACE.md
src/archon/: __init__.py  __main__.py  archon.sh
src/archon/agents/: __init__.py  architect_agent.py  backend_agent.py  base_agent.py  data_agent.py  database_agent.py  devops_agent.py  documentation_agent.py  frontend_agent.py  git_agent.py  integration_agent.py  performance_agent.py  security_agent.py  testing_agent.py
src/archon/cli/: auth.py  client.py  commands.py  conversation.py  repl.py  session_config.py  tui.py  ui.py  voice_commands.py
src/archon/intelligence/: __init__.py  (+7 more)
test_feature_impact/backend/: server.js
test_feature_impact/frontend/: App.jsx
test_patch_mode/backend/: server.js
test_retriever_proj/frontend/: App.js
test_sim_workspace/: README.md
test_sim_workspace/backend/: package.json  routes.js
tests/: __init__.py
tests/fixtures/: __init__.py  schemas.py
tests/mocks/: __init__.py
tests/unit/: __init__.py
tests/utils/: __init__.py
(+54 files in other folders)
