[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "archon-ai"
version = "0.1.0"
description = "Autonomous Engineering Organization CLI - A distributed multi-agent AI engineering operating system"
authors = ["Archon Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/archon-ai/archon"
repository = "https://github.com/archon-ai/archon"
keywords = ["ai", "agents", "orchestration", "engineering", "automation"]

packages = [{include = "archon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
openai = "^1.6.1"
anthropic = "^0.18.1"
google-generativeai = "^0.3.2"
tree-sitter = "^0.20.4"
networkx = "^3.2.1"
chromadb = "^0.4.22"
rich = "^13.7.0"
aiosqlite = "^0.19.0"
httpx = "^0.26.0"
pyyaml = "^6.0.1"
jsonschema = "^4.20.0"
psutil = "^5.9.7"
# ── Voice interface dependencies ───────────────────────────────────────────
google-genai = "^1.0"          # Unified Gemini SDK with Live API support
sounddevice = "^0.4.6"        # Cross-platform audio I/O
numpy = "^1.26"                # PCM audio buffer processing
pynput = "^1.7.7"             # Global keyboard listener for PTT / wake-word

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.8.0"

[tool.poetry.scripts]
archon = "archon.__main__:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
